2019-02-13  Bruno Haible  <bruno@clisp.org>

	doc: Simplify the title page.
	* doc/libunistring.texi (titlepage): Remove redundant subtitle.

2019-02-10  Bruno Haible  <bruno@clisp.org>

	Update licenses.
	* doc/fdl.texi: Update from gnulib.
	* doc/gpl.texi: Likewise.
	* doc/lgpl.texi: Likewise.

2019-02-10  Bruno Haible  <bruno@clisp.org>

	Use a newer texinfo.tex.
	* autogen.sh (TEXINFO_VERSION): Bump to 6.5.
	Fetch texinfo.tex from the texinfo git repository instead of the
	obsolete texinfo CVS repository.

2019-02-04  Bruno Haible  <bruno@clisp.org>

	Remove left-over empty directories in 'make distclean'.
	* lib/Makefile.am (DISTCLEANDIRS, DISTCLEANDIRS_NOT_IN_SRCDIR): New
	variables.
	(distclean-local): New target.
	* tests/Makefile.am (distclean-local): New target.

2019-02-04  Bruno Haible  <bruno@clisp.org>

	Move run-test to gnulib.
	* autogen.sh: Copy build-aux/run-test from gnulib.
	* build-aux/run-test: Remove file.

2019-02-03  Bruno Haible  <bruno@clisp.org>

	Move declared.sh to gnulib.
	* autogen.sh: Copy lib/declared.sh from gnulib.
	* lib/declared.sh: Remove file.

2019-01-28  Bruno Haible  <bruno@clisp.org>

	Accommodate a shell that is not in /bin/sh.
	* autogen.sh: Patch build-aux/test-driver with a patch from gnulib.

2018-10-23  Bruno Haible  <bruno@clisp.org>

	Support for per-thread locales on systems with HAVE_NAMELESS_LOCALES.
	This allows 'uc_locale_language' to return the right locale name for
	locales created by newlocale() or duplocale() on such systems, if and
	only if the 'newlocale', 'duplocale' overrides from gnulib are used.
	* lib/Makefile.am (config.h): Don't hide symbols that start with
	'libintl_locale'.

2018-09-17  Bruno Haible  <bruno@clisp.org>

	Remove the 'fixaclocal' auxiliary script.
	* autogen.sh: Don't invoke fixaclocal.
	* Makefile.am (ACLOCAL): Remove override.
	(EXTRA_DIST): Remove build-aux/fixaclocal.
	* build-aux/fixaclocal: Remove file.

2018-05-17  Bruno Haible  <bruno@clisp.org>
